<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DownloadManagementActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimaryDark"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/download_emptyView"
        android:paddingLeft="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_standard"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/ic_download_multiple"
            android:layout_width="@dimen/download_multiple_length"
            android:contentDescription="@string/download_multiple"
            android:layout_gravity="center"
            android:layout_height="@dimen/download_multiple_length"/>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/description_emotiocon_happy_Icon"
                android:src="@drawable/ic_emoticon_excited"
                android:layout_width="@dimen/emoticon_size"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_height="@dimen/emoticon_size" />
            <TextView
                android:text="@string/emptyView_download_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:textColor="@color/colorItem"
                android:gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/download_recyclerView"/>

</RelativeLayout>